white gap fix attempt no 2

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    height: 100%;
     min-height: 100dvh;
     color: #2c2c2c;
 }
